--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="node_modules/bootstrap/dist/css/bootstrap.min.css"
     />
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
     <!-- Favicon -->
     <link rel="icon" href="assets/favicon.ico" />
   </head>
