--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <!-- Bootstrap CSS (Local) -->
     <link
       rel="stylesheet"
-      href="node_modules/bootstrap/dist/css/bootstrap.min.css"
+      href="/node_modules/bootstrap/dist/css/bootstrap.min.css"
     />
     <!-- Custom CSS -->
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="stylesheet" type="text/css" href="/css/style.css" />
     <!-- Favicon -->
-    <link rel="icon" href="assets/favicon.ico" />
+    <link rel="icon" href="/assets/favicon.ico" />
   </head>
   <body>
     <!-- ===== Navbar ===== -->
@@ -20,7 +20,7 @@
       <div class="container">
         <a class="navbar-brand" href="#">
           <img
-            src="assets/images/logo.png"
+            src="/assets/images/logo.png"
             alt="SN Hotel Logo"
             width="40"
             height="40"
@@ -78,7 +78,7 @@
           <div class="col-md-4">
             <div class="card h-100">
               <img
-                src="assets/images/room1.jpg"
+                src="/assets/images/room1.jpg"
                 class="card-img-top"
                 alt="Standard Room"
               />
@@ -96,7 +96,7 @@
           <div class="col-md-4">
             <div class="card h-100">
               <img
-                src="assets/images/room2.jpg"
+                src="/assets/images/room2.jpg"
                 class="card-img-top"
                 alt="Deluxe Room"
               />
@@ -112,7 +112,7 @@
           <div class="col-md-4">
             <div class="card h-100">
               <img
-                src="assets/images/room3.jpg"
+                src="/assets/images/room3.jpg"
                 class="card-img-top"
                 alt="Family Suite"
               />
@@ -239,6 +239,6 @@
     </footer>
 
     <!-- Bootstrap JS (Local) -->
-    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
