--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!-- Bootstrap CSS (Local) -->
     <link
       rel="stylesheet"
+      type="text/css"
       href="/node_modules/bootstrap/dist/css/bootstrap.min.css"
     />
     <!-- Custom CSS -->
