--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="/node_modules/bootstrap/dist/css/bootstrap.min.css"
+      href="https://bestushan.github.io/hotel-website/node_modules/bootstrap/dist/css/bootstrap.min.css"
     />
     <!-- Custom CSS -->
     <link rel="stylesheet" type="text/css" href="/css/style.css" />
