--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SN Hotel Homestay - Nilai's Best Budget Stay</title>
     <!-- Bootstrap CSS (Local) -->
-    <link
-      rel="stylesheet"
-      href="node_modules/bootstrap/dist/css/bootstrap.min.css"
-    />
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
     <!-- Custom CSS -->
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <!-- Favicon -->
@@ -223,7 +220,10 @@
     <!-- ===== Footer ===== -->
     <footer class="bg-dark text-white py-4">
       <div class="container text-center">
-        <p>&copy; 2024 SN Hotel Homestay. All Rights Reserved.</p>
+        <p>
+          &copy; <span id="currentYear"></span> SN Hotel Homestay. All Rights
+          Reserved.
+        </p>
         <div class="social-icons mt-3">
           <a href="#" class="text-white mx-2"
             ><i class="fab fa-facebook-f"></i
@@ -239,6 +239,7 @@
     </footer>
 
     <!-- Bootstrap JS (Local) -->
+    <script src="js/script.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
